--- a/first-challenge/src/main/resources/application.yaml
+++ b/first-challenge/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_car
-    username: user
-    password: password
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
