Data constraints modified

--- a/first-challenge/src/main/resources/application.yaml
+++ b/first-challenge/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_car
     username: root
     password: root
@@ -9,3 +9,4 @@ spring:
       ddl-auto: update
     generate-ddl: true
     show-sql: true
+    open-in-view: true
